[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Arrow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/ArcherMan/Arrow.gd" type="Script" id=2]
[ext_resource path="res://Effects/ArrowTrail/ArrowTrail.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.66979, 1.3685 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[node name="Arrow" type="Area2D"]
z_index = -1
collision_layer = 0
collision_mask = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, 0 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.78669, 0.492157 )
shape = SubResource( 1 )

[node name="ArrowTrail" parent="." instance=ExtResource( 3 )]
z_index = -1
width = 2.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 2 )
targetPath = NodePath("..")
trailLength = 20

[node name="QueueFreeTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Arrow_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]
[connection signal="timeout" from="QueueFreeTimer" to="." method="_on_QueueFreeTimer_timeout"]
